--- a/src/main/webapp/WEB-INF/views/home/about.html
+++ b/src/main/webapp/WEB-INF/views/home/about.html
@@ -1,10 +1,187 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+      xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/masterPage}">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>About</title>
 </head>
 <body>
-$END$
+<th:block layout:fragment="content">
+    <div class="inner-page-banner-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="breadcrumb-area">
+                        <h1>About Us</h1>
+                        <ul>
+                            <li><a th:href="@{/#}">Home</a> /</li>
+                            <li>About</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Inner Page Banner Area End Here -->
+    <!-- About Us Page Area Start Here -->
+    <div class="about-us-page-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12">
+                    <div class="about-us-page-left">
+                        <a th:href="@{/#}"><img th:src="@{/img/about-us.jpg}" alt="about" class="img-responsive"></a>
+                    </div>
+                </div>
+                <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
+                    <div class="about-us-page-right">
+                        <h2>Who We Are</h2>
+                        <p>
+                        <span>Morem ipsum dolor sit amet, consectetur adipisci Reit, sed do eiusmod tempor
+                            incididuntut magna aliquaoe velit esse.</span>
+                        </p>
+                        <p>Tummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release.</p>
+                        <p>Hmmy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release ver since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- About Us Page Area End Here -->
+    <!-- Expert Team Area Start Here -->
+    <div class="expert-team-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                    <div class="section-title">
+                        <span class="title-bar-left"></span>
+                        <h2>Expert Team</h2>
+                        <span class="title-bar-right"></span>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                    <div class="expert-team-box">
+                        <ul class="expert-team-social">
+                            <li><a th:href="@{/#}"><i aria-hidden="true" class="fa fa-facebook"></i></a></li>
+                            <li><a th:href="@{/#}"><i aria-hidden="true" class="fa fa-twitter"></i></a></li>
+                            <li><a th:href="@{/#}"><i aria-hidden="true" class="fa fa-linkedin"></i></a></li>
+                            <li><a th:href="@{/#}"><i aria-hidden="true" class="fa fa-pinterest"></i></a></li>
+                        </ul>
+                        <div class="team-img-holder">
+                            <a th:href="@{/#}"><img th:src="@{/img/team/1.png}" alt="team" class="img-responsive"></a>
+                        </div>
+                        <div class="team-content-holder">
+                            <h3><a th:href="@{/#}">Jessy Rio</a></h3>
+                            <p>Designer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                    <div class="expert-team-box">
+                        <ul class="expert-team-social">
+                            <li><a th:href="@{/#}"><i aria-hidden="true" class="fa fa-facebook"></i></a></li>
+                            <li><a th:href="@{/#}"><i aria-hidden="true" class="fa fa-twitter"></i></a></li>
+                            <li><a th:href="@{/#}"><i aria-hidden="true" class="fa fa-linkedin"></i></a></li>
+                            <li><a th:href="@{/#}"><i aria-hidden="true" class="fa fa-pinterest"></i></a></li>
+                        </ul>
+                        <div class="team-img-holder">
+                            <a th:href="@{/#}"><img th:src="@{/img/team/2.png}" alt="team" class="img-responsive"></a>
+                        </div>
+                        <div class="team-content-holder">
+                            <h3><a th:href="@{/#}">Jack Sparo</a></h3>
+                            <p>Designer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                    <div class="expert-team-box">
+                        <ul class="expert-team-social">
+                            <li><a th:href="@{/#}"><i aria-hidden="true" class="fa fa-facebook"></i></a></li>
+                            <li><a th:href="@{/#}"><i aria-hidden="true" class="fa fa-twitter"></i></a></li>
+                            <li><a th:href="@{/#}"><i aria-hidden="true" class="fa fa-linkedin"></i></a></li>
+                            <li><a th:href="@{/#}"><i aria-hidden="true" class="fa fa-pinterest"></i></a></li>
+                        </ul>
+                        <div class="team-img-holder">
+                            <a th:href="@{/#}"><img th:src="@{/img/team/3.png}" alt="team" class="img-responsive"></a>
+                        </div>
+                        <div class="team-content-holder">
+                            <h3><a th:href="@{/#}">Tina Zena</a></h3>
+                            <p>Designer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                    <div class="expert-team-box">
+                        <ul class="expert-team-social">
+                            <li><a th:href="@{/#}"><i aria-hidden="true" class="fa fa-facebook"></i></a></li>
+                            <li><a th:href="@{/#}"><i aria-hidden="true" class="fa fa-twitter"></i></a></li>
+                            <li><a th:href="@{/#}"><i aria-hidden="true" class="fa fa-linkedin"></i></a></li>
+                            <li><a th:href="@{/#}"><i aria-hidden="true" class="fa fa-pinterest"></i></a></li>
+                        </ul>
+                        <div class="team-img-holder">
+                            <a th:href="@{/#}"><img th:src="@{/img/team/4.png}" alt="team" class="img-responsive"></a>
+                        </div>
+                        <div class="team-content-holder">
+                            <h3><a th:href="@{/#}">Kazi Fahim</a></h3>
+                            <p>Designer</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Expert Team Area End Here -->
+    <!-- Advantage2 Area Start Here -->
+    <div class="advantage2-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                    <div class="advantage-area-box">
+                        <div class="media">
+                            <a class="pull-left" th:href="@{/#}">
+                                <i class="flaticon-truck"></i>
+                            </a>
+                            <div class="media-body">
+                                <h3>FREE SHIPPING</h3>
+                                <p>On All Orders</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                    <div class="advantage-area-box">
+                        <div class="media">
+                            <a class="pull-left" th:href="@{/#}">
+                                <i class="flaticon-headphones"></i>
+                            </a>
+                            <div class="media-body">
+                                <h3>24/7 SERVICE</h3>
+                                <p>Get Help When You Need</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                    <div class="advantage-area-box">
+                        <div class="media">
+                            <a class="pull-left" th:href="@{/#}">
+                                <i class="flaticon-reload"></i>
+                            </a>
+                            <div class="media-body">
+                                <h3>100% MONEY BACK</h3>
+                                <p>Within 30 Day Guarantee</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</th:block>
 </body>
 </html>
