--- a/src/main/webapp/WEB-INF/views/home/blog.html
+++ b/src/main/webapp/WEB-INF/views/home/blog.html
@@ -1,10 +1,225 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+        xmlns="http://www.w3.org/1999/xhtml"
+        xmlns:th="http://www.thymeleaf.org"
+        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+        layout:decorate="~{layout/masterPage}">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Blog</title>
 </head>
 <body>
-$END$
+<th:block layout:fragment="content">
+    <!-- Inner Page Banner Area Start Here -->
+    <div class="inner-page-banner-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="breadcrumb-area">
+                        <h1>Blog Page</h1>
+                        <ul>
+                            <li><a th:href="@{#}">Home</a> /</li>
+                            <li>Blog</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Inner Page Banner Area End Here -->
+    <!-- Blog Page Area Start Here -->
+    <div class="blog-page-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-9 col-md-9 col-sm-8 col-xs-12">
+                    <div class="row">
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                            <div class="blog-page-box">
+                                <div class="blog-img-holder">
+                                    <a th:href="@{#}"><img class="img-responsive" alt="blog" th:src="@{/img/blog/inner1.jpg}"></a>
+                                </div>
+                                <div class="blog-content-holder">
+                                    <span>January 19, 2016</span>
+                                    <h3><a th:href="@{#}">Blog Title Here</a></h3>
+                                    <ul>
+                                        <li><span>by</span> Admin</li>
+                                        <li>Comments (05)</li>
+                                    </ul>
+                                    <p>Simply dummy text of the printing and typety esetting industryr drem Ipsum has been thety standard dummy since.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                            <div class="blog-page-box">
+                                <div class="blog-img-holder">
+                                    <a th:href="@{#}"><img class="img-responsive" alt="blog" th:src="@{/img/blog/inner2.jpg}"></a>
+                                </div>
+                                <div class="blog-content-holder">
+                                    <span>January 19, 2016</span>
+                                    <h3><a th:href="@{#}">Blog Title Here</a></h3>
+                                    <ul>
+                                        <li><span>by</span> Admin</li>
+                                        <li>Comments (05)</li>
+                                    </ul>
+                                    <p>Simply dummy text of the printing and typety esetting industryr drem Ipsum has been thety standard dummy since.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                            <div class="blog-page-box">
+                                <div class="blog-img-holder">
+                                    <a th:href="@{#}"><img class="img-responsive" alt="blog" th:src="@{/img/blog/inner3.jpg}"></a>
+                                </div>
+                                <div class="blog-content-holder">
+                                    <span>January 19, 2016</span>
+                                    <h3><a th:href="@{#}">Blog Title Here</a></h3>
+                                    <ul>
+                                        <li><span>by</span> Admin</li>
+                                        <li>Comments (05)</li>
+                                    </ul>
+                                    <p>Simply dummy text of the printing and typety esetting industryr drem Ipsum has been thety standard dummy since.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                            <div class="blog-page-box">
+                                <div class="blog-img-holder">
+                                    <a th:href="@{#}"><img class="img-responsive" alt="blog" th:src="@{/img/blog/inner4.jpg}"></a>
+                                </div>
+                                <div class="blog-content-holder">
+                                    <span>January 19, 2016</span>
+                                    <h3><a th:href="@{#}">Blog Title Here</a></h3>
+                                    <ul>
+                                        <li><span>by</span> Admin</li>
+                                        <li>Comments (05)</li>
+                                    </ul>
+                                    <p>Simply dummy text of the printing and typety esetting industryr drem Ipsum has been thety standard dummy since.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                            <div class="blog-page-box">
+                                <div class="blog-img-holder">
+                                    <a th:href="@{#}"><img class="img-responsive" alt="blog" th:src="@{/img/blog/inner5.jpg}"></a>
+                                </div>
+                                <div class="blog-content-holder">
+                                    <span>January 19, 2016</span>
+                                    <h3><a th:href="@{#}">Blog Title Here</a></h3>
+                                    <ul>
+                                        <li><span>by</span> Admin</li>
+                                        <li>Comments (05)</li>
+                                    </ul>
+                                    <p>Simply dummy text of the printing and typety esetting industryr drem Ipsum has been thety standard dummy since.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                            <div class="blog-page-box">
+                                <div class="blog-img-holder">
+                                    <a th:href="@{#}"><img class="img-responsive" alt="blog" th:src="@{/img/blog/inner6.jpg}"></a>
+                                </div>
+                                <div class="blog-content-holder">
+                                    <span>January 19, 2016</span>
+                                    <h3><a th:href="@{#}">Blog Title Here</a></h3>
+                                    <ul>
+                                        <li><span>by</span> Admin</li>
+                                        <li>Comments (05)</li>
+                                    </ul>
+                                    <p>Simply dummy text of the printing and typety esetting industryr drem Ipsum has been thety standard dummy since.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                            <ul class="mypagination">
+                                <li class="active"><a th:href="@{#}">1</a></li>
+                                <li><a th:href="@{#}">2</a></li>
+                                <li><a th:href="@{#}">3</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                    <div class="sidebar hidden-after-tab">
+                        <h2 class="title-sidebar">Search</h2>
+                        <div class="sidebar-search-area sidebar-section-margin">
+                            <div class="input-group stylish-input-group">
+                                <input type="text" class="form-control" placeholder="Search Here . . .">
+                                <span class="input-group-addon">
+					                        <button type="submit">
+					                            <span class="glyphicon glyphicon-search"></span>
+                                    </button>
+                                    </span>
+                            </div>
+                        </div>
+                        <h2 class="title-sidebar">RECENT POSTS</h2>
+                        <div class="recent-posts sidebar-section-margin">
+                            <div class="media">
+                                <a th:href="@{#}" class="pull-left">
+                                    <img alt="Media Object" th:src="@{/img/sidebar/blog1.jpg}" class="img-responsive">
+                                </a>
+                                <div class="media-body">
+                                    <h3 class="media-heading"><a th:href="@{#}">Blog Title Here</a></h3>
+                                    <p>22th August, 2016</p>
+                                </div>
+                            </div>
+                            <div class="media">
+                                <a th:href="@{#}" class="pull-left">
+                                    <img alt="Media Object" th:src="@{/img/sidebar/blog2.jpg}" class="img-responsive">
+                                </a>
+                                <div class="media-body">
+                                    <h3 class="media-heading"><a th:href="@{#}">Blog Title Here</a></h3>
+                                    <p>22th August, 2016</p>
+                                </div>
+                            </div>
+                            <div class="media">
+                                <a th:href="@{#}" class="pull-left">
+                                    <img alt="Media Object" th:src="@{/img/sidebar/blog3.jpg}" class="img-responsive">
+                                </a>
+                                <div class="media-body">
+                                    <h3 class="media-heading"><a th:href="@{#}">Blog Title Here</a></h3>
+                                    <p>22th August, 2016</p>
+                                </div>
+                            </div>
+                            <div class="media">
+                                <a th:href="@{#}" class="pull-left">
+                                    <img alt="Media Object" th:src="@{/img/sidebar/blog4.jpg}" class="img-responsive">
+                                </a>
+                                <div class="media-body">
+                                    <h3 class="media-heading"><a th:href="@{#}">Blog Title Here</a></h3>
+                                    <p>22th August, 2016</p>
+                                </div>
+                            </div>
+                        </div>
+                        <h2 class="title-sidebar">Archives</h2>
+                        <div class="archives sidebar-section-margin">
+                            <ul>
+                                <li><a th:href="@{#}"><i class="fa fa-chevron-right" aria-hidden="true"></i>January 2016</a></li>
+                                <li><a th:href="@{#}"><i class="fa fa-chevron-right" aria-hidden="true"></i>December 2015</a></li>
+                                <li><a th:href="@{#}"><i class="fa fa-chevron-right" aria-hidden="true"></i>November 2015</a></li>
+                                <li><a th:href="@{#}"><i class="fa fa-chevron-right" aria-hidden="true"></i>March 2015</a></li>
+                                <li><a th:href="@{#}"><i class="fa fa-chevron-right" aria-hidden="true"></i>January 2015</a></li>
+                            </ul>
+                        </div>
+                        <h2 class="title-sidebar">Product Tags</h2>
+                        <div class="product-tags">
+                            <ul>
+                                <li><a th:href="@{#}">Fashion</a></li>
+                                <li><a th:href="@{#}">Glamour</a></li>
+                                <li><a th:href="@{#}">Shoes</a></li>
+                                <li><a th:href="@{#}">Dress</a></li>
+                                <li><a th:href="@{#}">Kid’s</a></li>
+                                <li><a th:href="@{#}">Accessories</a></li>
+                                <li><a th:href="@{#}">Mobile</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Blog Page Area End Here -->
+</th:block>
 </body>
 </html>
