--- a/src/main/webapp/WEB-INF/views/home/login.html
+++ b/src/main/webapp/WEB-INF/views/home/login.html
@@ -1,10 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+      xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/masterPage}">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Login</title>
 </head>
 <body>
-$END$
+<th:block layout:fragment="content">
+    <!-- Inner Page Banner Area Start Here -->
+    <div class="inner-page-banner-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="breadcrumb-area">
+                        <h1>My Account</h1>
+                        <ul>
+                            <li><a th:href="@{/#}">Home</a> /</li>
+                            <li>Account</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Inner Page Banner Area End Here -->
+    <!-- Login Registration Page Area Start Here -->
+    <div class="login-registration-page-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                    <div class="login-registration-field">
+                        <h2 class="cart-area-title">Login</h2>
+                        <form action="#" th:action="@{/home/login}" method="post" th:object="${login}">
+                            <label>Username or email address *</label>
+                            <input type="text" th:field="*{username}" class="form-control" placeholder="Name or E-mail" />
+                            <p th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Lỗi tài khoản</p><br>
+                            <label>Password *</label>
+                            <input type="password" th:field="*{password}" class="form-control" placeholder="Password" /><br>
+                            <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Lỗi mật khẩu</p>
+                            <label class="check">Lost your password?</label>
+                            <button class="btn-send-message disabled" type="submit" value="Login">Login</button>
+                            <span><input type="checkbox" name="remember"/>Remember Me</span>
+                        </form>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                    <div class="login-registration-field">
+                        <h2 class="cart-area-title">Register</h2>
+                        <form>
+                            <label>User Name *</label>
+                            <input type="text" placeholder="Name" />
+                            <label>Email address *</label>
+                            <input type="text" placeholder="E-mail" />
+                            <label>Password *</label>
+                            <input type="password" placeholder="Password" />
+                            <button class="btn-send-message disabled" type="submit" value="Login">Register</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Login Registration Page Area End Here -->
+</th:block>
 </body>
 </html>
