--- a/src/main/webapp/WEB-INF/views/layout/masterPage.html
+++ b/src/main/webapp/WEB-INF/views/layout/masterPage.html
@@ -1,10 +1,233 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="no-js"
+      xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title layout:title-pattern="$LAYOUT_TITLE | $CONTENT_TITLE">Metro</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/x-icon" th:href="@{/img/favicon.png}">
+    <!-- Normalize CSS -->
+    <link rel="stylesheet" th:href="@{/css/normalize.css}">
+    <!-- Main CSS -->
+    <link rel="stylesheet" th:href="@{/css/main.css}">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <!-- Animate CSS -->
+    <link rel="stylesheet" th:href="@{/css/animate.min.css}">
+    <!-- Font-awesome CSS-->
+    <link rel="stylesheet" th:href="@{/css/font-awesome.min.css}">
+    <!-- Flaticon CSS-->
+    <link rel="stylesheet" type="text/css" th:href="@{/css/font/flaticon.css}">
+    <!-- Owl Caousel CSS -->
+    <link rel="stylesheet" th:href="@{/css/owl.carousel.min.css}">
+    <link rel="stylesheet" th:href="@{/css/owl.theme.default.min.css}">
+    <!-- Main Menu CSS -->
+    <link rel="stylesheet" th:href="@{/css/meanmenu.min.css}">
+    <!-- Nivo Slider CSS -->
+    <link rel="stylesheet" th:href="@{/lib/custom-slider/css/nivo-slider.css}" type="text/css" />
+    <link rel="stylesheet" th:href="@{/lib/custom-slider/css/preview.css}" type="text/css" media="screen" />
+    <!-- Select2 CSS -->
+    <link rel="stylesheet" th:href="@{/css/select2.min.css}">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <!-- Switch Style CSS -->
+    <link rel="stylesheet" th:href="@{/css/switch-style.css}">
+    <!-- Modernizr Js -->
+    <script th:src="@{/js/vendor/modernizr-2.8.3.min.js}"></script>
 </head>
 <body>
-$END$
+    <div class="wrapper-area">
+
+        <th:block th:replace="layout/layout.html::header"></th:block>
+        <th:block layout:fragment="content">
+            <h1>Content page render</h1>
+        </th:block>
+        <th:block th:replace="layout/layout.html::footer"></th:block>
+    </div>
+    <!-- Modal Dialog Box Start Here-->
+    <div id="myModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-body">
+                <button type="button" class="close myclose" data-dismiss="modal">&times;</button>
+                <div class="product-details1-area">
+                    <div class="product-details-info-area">
+                        <div class="row">
+                            <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+                                <div class="inner-product-details-left">
+                                    <div class="tab-content">
+                                        <div id="metro-related1" class="tab-pane fade active in">
+                                            <a href="#"><img class="img-responsive" th:src="@{/img/product/product-details1.jpg}" alt="single"></a>
+                                        </div>
+                                        <div id="metro-related2" class="tab-pane fade">
+                                            <a href="#"><img class="img-responsive" th:src="@{/img/product/product-details1.jpg}" alt="single"></a>
+                                        </div>
+                                        <div id="metro-related3" class="tab-pane fade">
+                                            <a href="#"><img class="img-responsive" th:src="@{/img/product/product-details1.jpg}" alt="single"></a>
+                                        </div>
+                                    </div>
+                                    <ul>
+                                        <li class="active">
+                                            <a aria-expanded="false" data-toggle="tab" href="#metro-related1"><img class="img-responsive" th:src="@{/img/product/product-details4.jpg}" alt="related1"></a>
+                                        </li>
+                                        <li>
+                                            <a aria-expanded="false" data-toggle="tab" href="#metro-related2"><img class="img-responsive" th:src="@{/img/product/product-details4.jpg}" alt="related2"></a>
+                                        </li>
+                                        <li>
+                                            <a aria-expanded="false" data-toggle="tab" href="#metro-related3"><img class="img-responsive" th:src="@{/img/product/product-details4.jpg}" alt="related3"></a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="col-lg-8 col-md-12 col-sm-12 col-xs-12">
+                                <div class="inner-product-details-right">
+                                    <h3>Product Title Here</h3>
+                                    <ul>
+                                        <li><i aria-hidden="true" class="fa fa-star"></i></li>
+                                        <li><i aria-hidden="true" class="fa fa-star"></i></li>
+                                        <li><i aria-hidden="true" class="fa fa-star"></i></li>
+                                        <li><i aria-hidden="true" class="fa fa-star"></i></li>
+                                        <li><i aria-hidden="true" class="fa fa-star"></i></li>
+                                    </ul>
+                                    <p class="price">$59.00</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tinc amet risus consectetur, non consectetur nisl finibus. Ut ac eros quis mi volutpat cursus vel non risus.</p>
+                                    <div class="product-details-content">
+                                        <p><span>SKU:</span> 0010</p>
+                                        <p><span>Availability:</span> In stock</p>
+                                        <p><span>Category:</span> Demo Products</p>
+                                    </div>
+                                    <ul class="product-details-social">
+                                        <li>Share:</li>
+                                        <li><a href="#"><i aria-hidden="true" class="fa fa-facebook"></i></a></li>
+                                        <li><a href="#"><i aria-hidden="true" class="fa fa-twitter"></i></a></li>
+                                        <li><a href="#"><i aria-hidden="true" class="fa fa-linkedin"></i></a></li>
+                                        <li><a href="#"><i aria-hidden="true" class="fa fa-pinterest"></i></a></li>
+                                    </ul>
+                                    <ul class="inner-product-details-cart">
+                                        <li><a href="#">Add To Cart</a></li>
+                                        <li>
+                                            <div class="input-group quantity-holder" id="quantity-holder">
+                                                <input type="text" placeholder="1" value="1" class="form-control quantity-input" name="quantity">
+                                                <div class="input-group-btn-vertical">
+                                                    <button type="button" class="btn btn-default quantity-plus"><i aria-hidden="true" class="fa fa-plus"></i></button>
+                                                    <button type="button" class="btn btn-default quantity-minus"><i aria-hidden="true" class="fa fa-minus"></i></button>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li><a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <a href="#" class="btn-services-shop-now" data-dismiss="modal">Close</a>
+            </div>
+        </div>
+    </div>
+    <!-- Modal Dialog Box End Here-->
+    <!-- Style Switch Start Here -->
+    <link id="switch_style" href="#" rel="stylesheet" type="text/css">
+    <div class="style-switch left" id="switch-style">
+        <a id="toggle-switcher" class="switch-button" title="Change Styles">
+            <i class="fa fa-spinner fa-spin fa-3x fa-fw"></i>
+        </a>
+        <div class="switched-options">
+            <div class="config-title">Style Switcher</div>
+            <ul class="list-unstyled styles">
+                <li>
+                    <a href="#" title="black" class="black color" id="black"></a>
+                </li>
+                <li>
+                    <a href="#" title="amber" class="amber color" id="amber"> </a>
+                </li>
+                <li>
+                    <a href="#" title="blue-grey" class="blue-grey color" id="blue-grey"> </a>
+                </li>
+                <li>
+                    <a href="#" title="blue" class="blue color" id="blue"> </a>
+                </li>
+                <li>
+                    <a href="#" title="cyan" class="cyan color" id="cyan"> </a>
+                </li>
+                <li>
+                    <a href="#" title="deep orange" class="deep-orange color" id="deep-orange"> </a>
+                </li>
+                <li>
+                    <a href="#" title="deep-purle" class="deep-purle color" id="deep-purle"> </a>
+                </li>
+                <li>
+                    <a href="#" title="green" class="green color" id="green"> </a>
+                </li>
+                <li>
+                    <a href="#" title="indigo" class="indigo color" id="indigo"> </a>
+                </li>
+                <li>
+                    <a href="#" title="light-blue" class="light-blue color" id="light-blue"> </a>
+                </li>
+                <li>
+                    <a href="#" title="light-green" class="light-green color" id="light-green"></a>
+                </li>
+                <li>
+                    <a href="#" title="lime" class="lime color" id="lime"></a>
+                </li>
+                <li>
+                    <a href="#" title="orange" class="orange color" id="orange"></a>
+                </li>
+                <li>
+                    <a href="#" title="palette" class="palette color" id="palette"></a>
+                </li>
+                <li>
+                    <a href="#" title="pink" class="pink color" id="pink"></a>
+                </li>
+                <li>
+                    <a href="#" title="purple" class="purple color" id="purple"></a>
+                </li>
+                <li>
+                    <a href="#" title="red" class="red color" id="red"></a>
+                </li>
+                <li>
+                    <a href="#" title="teal" class="teal color" id="teal"></a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <!-- Style Switch End Here -->
+    <!-- Preloader Start Here -->
+    <div id="preloader"></div>
+    <!-- Preloader End Here -->
+    <!-- jquery-->
+    <script th:src="@{/js/vendor/jquery-2.2.4.min.js}" type="text/javascript"></script>
+    <!-- Bootstrap js -->
+    <script th:src="@{/js/bootstrap.min.js}" type="text/javascript"></script>
+    <!-- Owl Cauosel JS -->
+    <script th:src="@{/js/owl.carousel.min.js}" type="text/javascript"></script>
+    <!-- Nivo slider js -->
+
+    <script th:src="@{/lib/custom-slider/js/jquery.nivo.slider.js}" type="text/javascript"></script>
+
+    <script th:src="@{/lib/custom-slider/home.js}" type="text/javascript"></script>
+    <!-- Meanmenu Js -->
+    <script th:src="@{/js/jquery.meanmenu.min.js}" type="text/javascript"></script>
+    <!-- WOW JS -->
+    <script th:src="@{/js/wow.min.js}" type="text/javascript"></script>
+    <!-- Plugins js -->
+    <script th:src="@{/js/plugins.js}" type="text/javascript"></script>
+    <!-- Countdown js -->
+    <script th:src="@{/js/jquery.countdown.min.js}" type="text/javascript"></script>
+    <!-- Srollup js -->
+    <script th:src="@{/js/jquery.scrollUp.min.js}" type="text/javascript"></script>
+    <!-- Isotope js -->
+    <script th:src="@{/js/isotope.pkgd.min.js}" type="text/javascript"></script>
+    <!-- Switch js -->
+    <script th:src="@{/js/switch-style.js}" type="text/javascript"></script>
+    <!-- Custom Js -->
+    <script th:src="@{/js/main.js}" type="text/javascript"></script>
 </body>
 </html>
